--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
     -   id: name-tests-test
         exclude: tests/constants.py
     -   id: requirements-txt-fixer
+        args: [requirements.txt, requirements-dev.txt]
     -   id: trailing-whitespace
 -   repo: local
     hooks:
